# codex-workflow-kit

./: .editorconfig  .gitattributes  .gitignore  ACCEPTANCE_GATES.md  AGENTS.md  CHANGELOG.md  CHANGE_AREAS.md  CODEBASE_INDEX.md  CONTRIBUTING.md  FILE_PRIORITY.md  FINAL_REPORT.md  LICENSE  NOISE_FILTER.md  OPERATING_RULES.md  README.en.md  README.md  RISK_PATTERNS.md  SEARCH_PLAYBOOK.md  TASK_INTAKE.md  TASK_SIZE_RULES.md  TEST_INDEX.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: task-example.md
memory/: current-task.md  decisions.md  done.md  handoffs.md
templates/: agent-task.template.md  review-checklist.md  session-workflow.md
tests/: test_workflow_tools.py
tools/: README.md  __init__.py  acceptance_check.py  bootstrap.py  close_task.py  common.py  create_handoff.py  explain_scan.py  init_change_areas.py  init_index.py  init_test_index.py  refresh_index.py  scaffold_task.py  scan_project.py  validate_workflow.py
